# libjsongit2

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: README-build.md  libjsongit2.dox
lib/conf/: gitolite.c
lib/job/: job.c
